--- a/.env.dist
+++ b/.env.dist
@@ -17,4 +17,19 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=c403a9242305c9a0166b552103e5e163
+
+
+OAUTH_FACEBOOK_ID=
+OAUTH_FACEBOOK_SECRET=
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL=mysql://root:12345@127.0.0.1:3308/facebook_oauth?serverVersion=5.7
+
+###< doctrine/doctrine-bundle ###
+
